--- a/CV-APP/react/src/Components/Footer/Footer.css
+++ b/CV-APP/react/src/Components/Footer/Footer.css
@@ -1,3 +1,14 @@
 .footer {
     text-align: center;
+    background-color: black;
+    color: white;
+    margin-top: unset;
+    padding: 35px;
+}
+
+hr {
+    margin-bottom: unset;
+    border: none;
+    height: 1px;
+    background-color: rgb(94, 93, 93);
 }
