--- a/CV-APP/react/src/Pages/Contact/Contact.css
+++ b/CV-APP/react/src/Pages/Contact/Contact.css
@@ -11,6 +11,10 @@
     justify-self: center;
 }
 
+a:link {
+    text-decoration: none;
+}
+
 @media (max-width: 480px) {
     .contact-grid,
     .contact-image {
