--- a/CV-APP/react/src/App.css
+++ b/CV-APP/react/src/App.css
@@ -1,4 +1,23 @@
+body {
+    font-family: 'Noto Sans', sans-serif;
+    color: rgb(165, 163, 163);
+    background-color: rgb(26, 25, 25);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+    font-weight: normal;
+    font-family: "Roboto Mono", monospace;
+}
+
 .App {
     max-width: 1040px;
     margin: 0 auto;
+}
+
+.hr {
+    background-color: white;
 }
