--- a/CV-APP/react/src/Components/Education/Education.css
+++ b/CV-APP/react/src/Components/Education/Education.css
@@ -1,10 +1,16 @@
 .education-grid {
     display: grid;
     grid-template-columns: 50% 50%;
+    margin: 50px;
 }
 
-.education {
+.education1,
+.education2 {
     text-align: center;
+    background-color: black;
+    margin: 5px;
+    border: none;
+    padding: 5px;
 }
 
 @media (max-width: 480px) {
