--- a/CV-APP/react/src/Components/Footer/Footer.css
+++ b/CV-APP/react/src/Components/Footer/Footer.css
@@ -6,8 +6,9 @@
     padding: 35px;
 }
 
-hr {
+.hr-footer {
     margin-bottom: unset;
+    margin-top: 1.5cm;
     border: none;
     height: 1px;
     background-color: rgb(94, 93, 93);
