--- a/CV-APP/react/src/Components/Experience/Experience.css
+++ b/CV-APP/react/src/Components/Experience/Experience.css
@@ -1,10 +1,16 @@
 .experience-grid {
     display: grid;
     grid-template-columns: 50% 50%;
+    margin: 50px;
 }
 
-.experience {
+.experience1,
+.experience2 {
     text-align: center;
+    background-color: black;
+    margin: 5px;
+    border: none;
+    padding: 5px;
 }
 
 @media (max-width: 480px) {
