--- a/CV-APP/react/src/Components/Project/Project.css
+++ b/CV-APP/react/src/Components/Project/Project.css
@@ -1,50 +1,51 @@
-.wallpaper {
+.project-all {
+    display: grid;
+    grid-area: auto;
+}
+
+.wallpaper-all-project-description {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("src/images/mac.jpeg");
     background-size: cover;
     background-position: center;
-    height: 200px;
+    height: auto;
+    display: grid;
+    grid-area: auto;
 }
 
 .project-description {
     text-align: center;
     color: rgb(248, 246, 246);
+    margin: 50px;
+    border: none;
+    padding: 20px;
 }
 
 .container-grid {
     display: grid;
     grid-template-rows: 50% 50%;
+    text-align: center;
     margin: 50px;
+    border: none;
+    padding: 20px;
 }
 
 .shop-app {
     display: grid;
     grid-template-columns: 50% 50%;
-    margin-right: 50px;
-    margin-left: 50px;
-    border: none;
-    padding: 5px;
     align-items: center;
 }
 
 .toDo-app {
     display: grid;
     grid-template-columns: 50% 50%;
-    margin-right: 50px;
-    margin-left: 50px;
-    border: none;
-    padding: 5px;
     align-items: center;
-}
-
-.project.image {
-    display: grid;
 }
 
 @media (max-width: 650px) {
     .container-grid,
+    .project-top,
     .shop-app,
-    .toDo-app,
-    .project.image {
+    .toDo-app {
         grid-template-columns: 100%;
     }
 }
